# Detect-russian-road-signs

./: .gitignore  LICENSE  README.md  pyproject.toml
detect_russian_road_signs/: __init__.py  main.py
detect_russian_road_signs/neuralnet/: __init__.py  dataset.py  draw.py  network.py
